--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,8 @@
 }
 body {
   margin: 0;
-  font-family: Heebo, sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: "Heebo", sans-serif;
 }
